# architectural-floor-plan-digitization

./: .gitignore  Makefile  pyproject.toml
configs/: dataset.yaml
data/splits/: dataset_stats.json  selected_folders.json  test.json  train.json  val.json
docs/: svg_findings.md
scripts/: investigate_classes.py
src/data/: convert_annotations.py  dataset_stats.py  select_subset.py  verify_annotations.py
src/evaluation/: evaluate_test.py  visual_inference_test.py
src/export/: export_cad.py
src/postprocessing/: post_process.py
src/preprocessing/: preprocess_pipeline.py
src/training/: hyperparameter_tuning.py  train_yolo.py
