[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floorplan-digitizer"
version = "0.1.0"
description = "Automated digitization of architectural floor plans using YOLOv8"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Edirisinghe E.A.T.U.G." },
  { name = "Gunathilaka G.P.K.H." },
  { name = "Hewage D.N.K." },
  { name = "Munasinghe D.A.S." },
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py310"